# web-app-examples

./: README.md
ml-mpc/: LICENSE  README.md  model.json  package-lock.json  tsconfig.json
ml-mpc/.next/: app-build-manifest.json  trace
ml-mpc/.next/cache/webpack/client-development/: index.pack.gz.old
ml-mpc/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
ml-mpc/.next/cache/webpack/edge-server-production/: 0.pack  1.pack  4.pack  index.pack  index.pack.old
ml-mpc/.next/cache/webpack/server-development/: index.pack.gz.old
ml-mpc/.next/cache/webpack/server-production/: 1.pack  2.pack
ml-mpc/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
ml-mpc/.next/server/app/quiz/: page.js  page_client-reference-manifest.js
ml-mpc/.next/server/vendor-chunks/: @partisiablockchain.js  @secata-public.js  @swc.js  bn.js.js  brorand.js  elliptic.js  framer-motion.js  hash.js.js  hmac-drbg.js  inherits.js  lucide-react.js  minimalistic-assert.js  minimalistic-crypto-utils.js  motion-dom.js  motion-utils.js  next.js
ml-mpc/.next/static/chunks/: app-pages-internals.js  webpack.js
ml-mpc/.next/static/webpack/: webpack.f813017d9c0ce8fd.hot-update.js
ml-mpc/.next/types/app/: layout.ts
ml-mpc/app/: layout.tsx  page.tsx  types.ts
ml-mpc/app/actions/: opengraph-image.tsx
ml-mpc/backend/: model.json
ml-mpc/backend/model/: personality_model.joblib
ml-mpc/backend/scripts/test/: test_zk_contract.py
ml-mpc/components/: floating-icons.tsx  geometric-background.tsx  privacy-notice.tsx  quiz-card.tsx  split-text.tsx  text-reveal.tsx  typography-animation.tsx
ml-mpc/contracts/: Cargo.toml
ml-mpc/contracts/zk-classification/: Cargo.toml
ml-mpc/frontend/: .example.env  README.md  package.json  tailwind.config.js  tailwind.config.ts  test.ts  tsconfig.json
ml-mpc/frontend/app/actions/: get-results.ts  upload-model.ts
ml-mpc/frontend/app/quiz/: page.tsx
ml-mpc/frontend/components/: animated-text.tsx  beta-badge.tsx  feature-card.tsx  loading-view.tsx  marquee-text.tsx  parallax-section.tsx  quiz-header.tsx  results-view.tsx  share-card.tsx
ml-mpc/frontend/hooks/: usePersonalityContract.ts
ml-mpc/frontend/lib/: personality-data.ts  sendZkInputHelper.ts
ml-mpc/frontend/lib/data/: model2.json
ml-mpc/lib/: ClassificationCodegen.ts  questions.ts
ml-mpc/ml-training-python/: README.md  requirements.txt
ml-mpc/ml-training-python/model/: personality_tree_contract.json
ml-mpc/ml-training-python/scripts/: questions.py  train_model.py
ml-mpc/ml-training-python/scripts/contract-deploy/: build_contract.py
ml-mpc/ml-training-python/scripts/test/: generate_test_cases.py  test_data_quality.py
ml-mpc/rust-classification-smart-contarcts/zk-classification/: README.md
ml-mpc/rust-classification-smart-contarcts/zk-classification/src/: lib.rs  zk_compute.rs
ml-mpc/rust-classification-smart-contracts/: README.md
(+5 files in other folders)
