[package]
name = "zk-classification"
readme = "README.md"
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]

[lib]
crate-type = ['rlib', 'cdylib']

[package.metadata.zk]
zk-compute-path = "src/zk_compute.rs"

[dependencies]
pbc_contract_common = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_zk = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
